Fix white space on mobile and desktop; Fix issue with empty input auto-shrinking (#1143)
Added css styles and tweaks to remove excess whitespace.

Adjusted FitTextDirective directive class to enable textarea more robust autosizing.

--- a/src/angular-app/languageforge/lexicon/editor/_editor.scss
+++ b/src/angular-app/languageforge/lexicon/editor/_editor.scss
@@ -304,7 +304,7 @@ dc-entry .card {
     .lexiconItemListContainer {
       margin-bottom: 15px;
       @include media-breakpoint-up(sm) {
-        height: calc(100vh - 420px);
+        height: calc(100vh - 568px);
         overflow: auto;
         }
     }
@@ -327,7 +327,7 @@ dc-entry .card {
 
 #lexAppEditView {
   .lexiconItemListContainer {
-    max-height: calc(100vh - 420px);
+    height: calc(100vh - 568px);
     overflow: auto;
   }
   .word-definition-title {
